--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 			</div>
 			<p class="text">Drag and drop to reorder list</p>
 		</div>
+		<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
